Resizeing of the car in the popup

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                     pointer-events: none;">
 
         <!-- 4. Auto - Position wird per JavaScript aus SVG-Pfad berechnet -->
-        <img src="{{ url_for('static', filename='uploads/Car.svg') }}"
+        <img src="{{ url_for('static', filename='uploads/car.svg') }}"
              alt="Auto"
              class="car-overlay"
              style="position: absolute;
@@ -130,9 +130,8 @@ console.log('ðŸ“… Naechste Pruefung:', nextExam);
                     <div class="miniature-wrapper">
                         <img src="{{ url_for('static', filename='uploads/Pfad_Popup.svg') }}"
                              alt="Studienpfad" class="miniature-pfad">
-                        <img src="{{ url_for('static', filename='uploads/Car.svg') }}"
-                             alt="Auto" class="miniature-car"
-                             style="position: absolute; width: 8%; z-index: 10;">
+                        <img src="{{ url_for('static', filename='uploads/car.svg') }}"
+                             alt="Auto" class="miniature-car">
                     </div>
                 </div>
             </div>
